--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,9 +1,8 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
+  width: full screen;
   margin: 0 auto;
-  padding: 2rem;
   font-weight: normal;
 }
 
@@ -21,7 +20,7 @@ a,
   }
 }
 
-@media (min-width: 1024px) {
+/* @media (min-width: 1024px) {
   body {
     display: flex;
     place-items: center;
@@ -29,7 +28,10 @@ a,
 
   #app {
     display: grid;
+    display: flex;
+    justify-content: center;
+    max-width: 1820px;
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
-}
+} */
