--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -7,6 +7,7 @@ body {
   padding: 0;
   font-family: 'Noto Sans TC', sans-serif;
 }
+/* 字體設計規範 */
 .headline {
   font-size: 36px;
   color: #343557;
@@ -28,6 +29,10 @@ body {
   font-size: 24px;
   color: black;
 }
+.content-text-white {
+  font-size: 24px;
+  color: white;
+}
 .content-text-bolded {
   font-size: 24px;
   color: #343557;
@@ -43,7 +48,44 @@ body {
   color: #343557;
   font-weight: bold;
 }
+.small-text-18 {
+  font-size: 18px;
+  text-decoration-color: #5d5d5d;
+  text-underline-offset: 5px;
+}
 .small-text {
   font-size: 16px;
-  color: #5D5D5D;
+  color: #5d5d5d;
+}
+
+/* 顏色設計規範 */
+.background-light-gray {
+  background-color: #e1e1e1;
+}
+.warning-green {
+  background-color: #11bc37;
+}
+.warning-red {
+  background-color: #df1f1f;
+}
+.text-dark-gray {
+  color: #424242;
+}
+.text-gray {
+  color: #5d5d5d;
+}
+/* 其他獨立設計 */
+.bus-list {
+  display: flex;
+  justify-content: center;
+  align-items: start;
+}
+.z-index-0 {
+  z-index: 0;
+}
+.z-index-1 {
+  z-index: 1;
+}
+.z-index-2 {
+  z-index: 2;
 }
